--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,19 @@
-<app-header></app-header>
+
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <app-header></app-header>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-3">
+      <app-sidebar></app-sidebar>
+    </div>
+
+    <div class="col-9">
+      <!-- <app-main></app-main> -->
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
